@@ -57,6 +57,10 @@ unique(x, incomparables = FALSE, \dots)
 
   Missing values are regarded as equal, but \code{NaN} is not equal to
   \code{NA_real_}.
+  
+  Values in \code{incomparables} will never be marked as duplicated.
+  This is intended to be used for a fairly small set of values and will
+  not be efficient for a very large set.
 }
 \value{
   For a vector, an object of the same type of \code{x}, but with only
